<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">易校园</string>
    <string name="auto_school_hint_text">请输入学校名称</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="publish_post_text">发表帖子</string>
	<string name="deal_text">交易帖</string>
	<string name="pa_text">求助贴</string>
	<string name="hang_text">闲聊贴</string>
	
	    <string name="course">每周课表</string>
    <string name="feed3">意见反馈</string>
    <string name="cout"> 请输入您的意见#(200字以内)</string>
    <string name="addcourse">添加课程</string>
    <string name="caddress">输入上课地点</string>
    <string name="ccourse">输入上的课程</string>
    <string name="cteacher">输入任课教师</string>
    <string name="search">蹭课</string>
    <string name="alarm">提醒</string>
    <string name="alarmoff">上课静音功能</string>
    <string name="alarmoff1">课前提醒功能</string>
    <string name="week">星期</string>
    <string name="monday">1</string>
    <string name="num">第</string>
   <string name="joint">节</string>
   <string name="start"> </string>
   <string name="d1">1</string>
   <string name="d2">2</string>
   <string name="d3">3</string>
   <string name="d4">4</string>
   <string name="d5">5</string>
   <string name="d6">6</string>
   <string name="d7">7</string>
   <string name="d8">8</string>
   <string name="d9">9</string>
   <string name="d10">10</string>
   <string name="d11">11</string>
   <string name="d12">12</string>
   <string name="xq1">星期一</string>
   <string name="xq2">星期二</string>
   <string name="xq3">星期三</string>
   <string name="xq4">星期四</string>
   <string name="xq5">星期五</string>
   <string name="xq6">星期六</string>
   <string name="xq7">星期日</string>
    <string name="addsay">滑动添加时间 </string>
</resources>
