<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fffafa"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#d3d3d3"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/back1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
             android:background="@drawable/back"
            />
        <TextView
            android:id="@+id/addcousetext"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:maxLength="7"
            android:text="@string/addcourse"
            android:paddingTop="6dp"
            android:textSize="23sp"
            android:textColor="#666666" />
        <Button
            android:id="@+id/saveb"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
             android:background="@drawable/finsh"
             />
    </RelativeLayout>
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:background="#d2b48c"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
         >
    <EditText
        android:id="@+id/addcourseclass"
        android:layout_width="fill_parent"
        android:layout_height="80dp"       
        android:drawableLeft="@drawable/course"
        android:ems="10"
        android:hint="@string/ccourse" />
    <EditText
        android:id="@+id/addcourseedit"
        android:layout_width="fill_parent"
        android:layout_height="80dp"  
        android:drawableLeft="@drawable/address"
        android:ems="10"
        android:hint="@string/caddress" />
    <EditText
        android:id="@+id/addcourseteacher"
        android:layout_width="fill_parent"
        android:layout_height="80dp"          
        android:drawableLeft="@drawable/teacher"
        android:ems="10"
        android:hint="@string/cteacher" />
     </LinearLayout>
     
  </LinearLayout >

