<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:orientation="vertical"
    android:background="#fffff0"
    tools:context=".MainActivity" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="#f5f5f5" >

    <Button
        android:id="@+id/back2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:background="@drawable/back" />
    <TextView
        android:id="@+id/feed"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:ellipsize="end"
        android:maxLength="7"
        android:paddingTop="6dp"
        android:text="@string/feed3"
        android:textColor="#808080"
        android:textSize="20sp" />
    
</RelativeLayout>

<LinearLayout
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:paddingLeft="40dp"
    android:paddingTop="30dp" >

    <EditText
        android:id="@+id/editfeed"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffe4b5"
        android:gravity="top"
        android:ems="10"
        android:hint="@string/cout" >
        <requestFocus />
    </EditText>
</LinearLayout>

<ImageView
    android:id="@+id/backadvise"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:contentDescription="@string/app_name"
    android:src="@drawable/advise" />
</LinearLayout>





