<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:weightSum="10" >

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white" >

        <include layout="@layout/top" />
    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/top_divider_color_day" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical" >

        <com.thelionking.campus.syllabus.SlidingLayout
            android:id="@+id/slidingLayout"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:background="#f5f5dc"
                android:orientation="vertical" >

                <ListView
                    android:id="@+id/list1"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="22dp"
                    android:layout_marginTop="25dp"
                    android:background="#FFFFF0" >
                </ListView>

                <ImageView
                    android:id="@+id/people"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/list1"
                    android:layout_below="@id/list1"
                    android:layout_marginTop="50dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/peoplesay" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layoutcourse"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="#f5f5dd"
                android:orientation="vertical" >

                <RelativeLayout
                    android:visibility="gone"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="#d3d3d3"
                    android:orientation="horizontal" >

                    <TextView
                        
                        android:id="@+id/title"
                        android:layout_width="120dp"
                        android:layout_height="50dp"
                        android:layout_centerHorizontal="true"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/course"
                        android:textColor="#666666"
                        android:textSize="23sp" />

                    <Button
                        android:id="@+id/add"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/set" />

                    <Button
                        android:id="@+id/set"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/set" />
                </RelativeLayout>

                <ScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <!-- 定义HorizontalScrollView，为里面的组件添加水平滚动条 -->

                    <HorizontalScrollView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >

                            <LinearLayout
                                android:layout_width="30dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingBottom="5dp"
                                android:paddingLeft="3dp"
                                android:paddingRight="3dp"
                                android:paddingTop="5dp" >

                                <TextView
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:background="#00000000"
                                    android:gravity="center"
                                    android:padding="5dp"
                                    android:text="@string/start"
                                    android:textColor="#00000000"
                                    android:textSize="15sp" />

                                <TextView
                                    android:layout_width="fill_parent"
                                    android:layout_height="62dp"
                                    android:background="#f6e1a0"
                                    android:gravity="center"
                                    android:text="@string/d1"
                                    android:textColor="#666666"
                                    android:textSize="12sp" />

                                <TextView
                                    android:layout_width="fill_parent"
                                    android:layout_height="62dp"
                                    android:gravity="center"
                                    android:text="@string/d2"
                                    android:textColor="#666666"
                                    android:textSize="12sp" />

                                <TextView
                                    android:layout_width="fill_parent"
                                    android:layout_height="62dp"
                                    android:background="#f6e1a0"
                                    android:gravity="center"
                                    android:text="@string/d3"
                                    android:textColor="#666666"
                                    android:textSize="12sp" />

                                <TextView
                                    android:layout_width="fill_parent"
                                    android:layout_height="62dp"
                                    android:gravity="center"
                                    android:text="@string/d4"
                                    android:textColor="#666666"
                                    android:textSize="12sp" />

                                <TextView
                                    android:layout_width="fill_parent"
                                    android:layout_height="62dp"
                                    android:background="#f6e1a0"
                                    android:gravity="center"
                                    android:text="@string/d5"
                                    android:textColor="#666666"
                                    android:textSize="12sp" />

                                <TextView
                                    android:layout_width="fill_parent"
                                    android:layout_height="62dp"
                                    android:gravity="center"
                                    android:text="@string/d6"
                                    android:textColor="#666666"
                                    android:textSize="12sp" />

                                <TextView
                                    android:layout_width="fill_parent"
                                    android:layout_height="62dp"
                                    android:background="#f6e1a0"
                                    android:gravity="center"
                                    android:text="@string/d7"
                                    android:textColor="#666666"
                                    android:textSize="12sp" />

                                <TextView
                                    android:layout_width="fill_parent"
                                    android:layout_height="62dp"
                                    android:gravity="center"
                                    android:text="@string/d8"
                                    android:textColor="#666666"
                                    android:textSize="12sp" />

                                <TextView
                                    android:layout_width="fill_parent"
                                    android:layout_height="62dp"
                                    android:background="#f6e1a0"
                                    android:gravity="center"
                                    android:text="@string/d9"
                                    android:textColor="#666666"
                                    android:textSize="12sp" />

                                <TextView
                                    android:layout_width="fill_parent"
                                    android:layout_height="62dp"
                                    android:gravity="center"
                                    android:text="@string/d10"
                                    android:textColor="#666666"
                                    android:textSize="12sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/ll1"
                                android:layout_width="75dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingBottom="5dp"
                                android:paddingRight="3dp"
                                android:paddingTop="5dp" >

                                <TextView
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:background="#f6e1a0"
                                    android:gravity="center"
                                    android:padding="5dp"
                                    android:text="@string/xq1"
                                    android:textColor="#666666"
                                    android:textSize="15sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/ll2"
                                android:layout_width="75dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingBottom="5dp"
                                android:paddingRight="3dp"
                                android:paddingTop="5dp" >

                                <TextView
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:padding="5dp"
                                    android:text="@string/xq2"
                                    android:textColor="#666666"
                                    android:textSize="15sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/ll3"
                                android:layout_width="75dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingBottom="5dp"
                                android:paddingRight="3dp"
                                android:paddingTop="5dp" >

                                <TextView
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:background="#f6e1a0"
                                    android:gravity="center"
                                    android:padding="5dp"
                                    android:text="@string/xq3"
                                    android:textColor="#666666"
                                    android:textSize="15sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/ll4"
                                android:layout_width="75dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingBottom="5dp"
                                android:paddingRight="3dp"
                                android:paddingTop="5dp" >

                                <TextView
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:padding="5dp"
                                    android:text="@string/xq4"
                                    android:textColor="#666666"
                                    android:textSize="15sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/ll5"
                                android:layout_width="75dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingBottom="5dp"
                                android:paddingRight="3dp"
                                android:paddingTop="5dp" >

                                <TextView
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:background="#f6e1a0"
                                    android:gravity="center"
                                    android:padding="5dp"
                                    android:text="@string/xq5"
                                    android:textColor="#666666"
                                    android:textSize="15sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/ll6"
                                android:layout_width="75dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingBottom="5dp"
                                android:paddingRight="3dp"
                                android:paddingTop="5dp" >

                                <TextView
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:padding="5dp"
                                    android:text="@string/xq6"
                                    android:textColor="#666666"
                                    android:textSize="15sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/ll7"
                                android:layout_width="75dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingBottom="5dp"
                                android:paddingRight="3dp"
                                android:paddingTop="5dp" >

                                <TextView
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:background="#f6e1a0"
                                    android:gravity="center"
                                    android:padding="5dp"
                                    android:text="@string/xq7"
                                    android:textColor="#666666"
                                    android:textSize="15sp" />
                            </LinearLayout>
                        </LinearLayout>
                    </HorizontalScrollView>
                </ScrollView>
            </LinearLayout>
        </com.thelionking.campus.syllabus.SlidingLayout>
    </LinearLayout>

</LinearLayout>